🚀 COMPLETE PROFESSIONAL CTI DASHBOARD

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,1 +1,20 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>CTI Dashboard</title></head><body><div id="root"></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#0F172A" />
+  <meta name="description" content="Professional Cyber Threat Intelligence Dashboard - Advanced threat analysis and real-time monitoring" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+  <title>CTI Dashboard - Professional Threat Intelligence</title>
+</head>
+<body>
+  <noscript>You need to enable JavaScript to run this professional CTI Dashboard.</noscript>
+  <div id="root"></div>
+</body>
+</html>
